# swiki

./: .drone.yml  .env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  justfile
migrations/: 001_initial-create.sql
src/: article.rs  articles.rs  cache.rs  database.rs  error.rs  main.rs  search.rs  settings.rs  tests.rs  users.rs
src/database/: articles.rs  id.rs  users.rs
src/database/articles/: rev_id.rs
src/db/: articles.rs  mod.rs  users.rs
static/: index.css
static/js/: burger.js
templates/: article.html.tera  article_404.html.tera  article_create.html.tera  article_edit.html.tera  article_edit_success.html.tera  article_revs.html.tera  error.html.tera  index.html.tera  login.html.tera  login_success.html.tera  logout_success.html.tera  register.html.tera  register_success.html.tera  search.html.tera  settings_panel.html.tera  settings_success.html.tera
