[package]
name = "swiki"
version = "0.1.0"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
sled = "0.34"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust-argon2 = "0.8"
rand = "0.8"
bincode = "1"
pulldown-cmark = "0.8"
itertools = "0.10"
log = "0.4"
captcha = "0.0.8"
uuid = { version = "*", features = ["v4"] }
zeroize = "1"
base64 = "0.13"
tantivy = "0.14"
dashmap = "4"
parking_lot = "0.11"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
features = ["uuid"]

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
features = ["tera"]

[dev-dependencies]
lipsum = "0.7"
serde_urlencoded = "0.7"
scraper = "0.12"
