[package]
name = "swiki"
version = "0.1.0"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"


[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust-argon2 = "0.8"
rand = "0.8"
bincode = "1"
pulldown-cmark = "0.8"
itertools = "0.10"
log = "0.4"
captcha = "0.0.8"
uuid = { version = "*", features = ["v4"] }
zeroize = "1"
base64 = "0.13"
tantivy = "0.16"
dashmap = "4"
parking_lot = "0.11"
figment = "0.10"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["uuid"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "offline",
    "chrono",
    "uuid",
]

[dev-dependencies]
serde_urlencoded = "0.7"
scraper = "0.12"
serial_test = "0.5"
